add profile management + make log json
